# Job-Search-Copilot

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-09-ephemeral-search.md
docs/superpowers/specs/: 2026-04-09-ephemeral-search-design.md
migrations/: env.py
src/jsc/: __init__.py  config.py  dependencies.py  main.py
src/jsc/api/: candidates.py  jobs.py  matches.py  router.py  search.py  system.py
src/jsc/db/: base.py  engine.py
src/jsc/db/models/: __init__.py  candidate.py  job.py  match.py
src/jsc/ingestion/: base.py  coordinator.py  fetcher.py  registry.py
src/jsc/ingestion/adapters/: career_page.py  generic_html.py  greenhouse.py  lever.py
src/jsc/parsing/: job_normalizer.py  profile_extractor.py  resume_parser.py  skill_taxonomy.py
src/jsc/providers/: base.py  factory.py  openai_embeddings.py  openai_llm.py
src/jsc/ranking/: base.py  explainer.py  location.py  pipeline.py  semantic.py  seniority.py  skill_coverage.py  title_match.py
src/jsc/schemas/: candidate.py  common.py  job.py  match.py  search.py
src/jsc/search/: base.py  cache.py  registry.py  service.py
src/jsc/search/providers/: adzuna.py
src/jsc/services/: dedup_service.py  job_service.py  match_service.py  resume_service.py
src/jsc/utils/: robots.py  text.py  url.py
tests/: conftest.py
tests/unit/: test_adzuna_provider.py  test_dedup_service.py  test_job_normalizer.py  test_ranking_pipeline.py  test_search_api.py  test_search_base.py  test_search_cache.py  test_search_service.py  test_skill_taxonomy.py  test_text_utils.py  test_url_utils.py
